# py-pants-demo

./: .gitignore  .pre-commit-config.yaml  README.md  makefile  pants.toml  pyproject.toml
commons/: string_utils.py  test_string_utils.py
hello_world/: BUILD  main.py  requirements.txt  test_main.py
